objects/Projekt__c/Projekt__c.object-meta.xml
<CustomObject>
    <label>Projekt</label>
    <nameField>
        <label>Číslo projektu</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projekty</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>