objects/Projekt__c/fields/E_mail_2__c.field-meta.xml
<CustomField>
    <fullName>E_mail_2__c</fullName>
    <label>E-mail 2</label>
    <type>Email</type>
</CustomField>