objects/Projekt__c/fields/Jmeno__c.field-meta.xml
<CustomField>
    <fullName>Jmeno__c</fullName>
    <label>Jméno</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>