objects/Projekt__c/fields/Nazev__c.field-meta.xml
<CustomField>
    <fullName>Nazev__c</fullName>
    <label>Název</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>