objects/Projekt__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Pro budoucnost</fullName>
            </value>
            <value>
                <fullName>Pro Evropu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>