objects/Projekt__c/fields/Stav__c.field-meta.xml
<CustomField>
    <fullName>Stav__c</fullName>
    <label>Stav</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>zamítnutý</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>