objects/Projekt__c/fields/Text_zduvodneni__c.field-meta.xml
<CustomField>
    <fullName>Text_zduvodneni__c</fullName>
    <label>Text zdůvodnění</label>
    <type>TextArea</type>
</CustomField>