objects/Projekt__c/fields/Ucet__c.field-meta.xml
<CustomField>
    <fullName>Ucet__c</fullName>
    <label>Účet</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projekty</relationshipLabel>
    <relationshipName>Projekty</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>